--- a/src/ui/sidebar/index.html
+++ b/src/ui/sidebar/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-TW">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf‑8" />
   <title>LLM Sidebar</title>
   <style>
     body {
@@ -11,11 +11,9 @@
       margin: 0;
       display: flex;
       flex-direction: column;
-      /* Changed to column */
       align-items: center;
       box-sizing: border-box;
       min-height: 100vh;
-      /* Hide horizontal scrollbar */
       overflow-x: hidden;
     }
 
@@ -31,39 +29,44 @@
       gap: 12px;
       height: auto;
       flex: 1;
-      /* Let the card take up available space */
       overflow: hidden;
-      /* Hide overflow from card */
     }
 
     h2 {
-      margin: 0 0 8px 0;
+      margin: 0 0 8px;
       font-size: 1.4rem;
       color: #bb86fc;
     }
 
     #providerInfo {
-      font-size: 0.9rem;
+      font-size: .9rem;
       color: #a0a0a0;
     }
 
+    /* 按鈕群組置中 */
+    .button-grouptop {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      margin-top: 12px;
+    }
+
     button {
-      background: #bb86fc;
-      
-      color: #121212;
-      border: none;
-      padding: 10px;
+      background: transparent;
+      color: #a0a0a0;          /* 灰白文字 */
+      border: 1px solid #444;  /* 灰色外框 */
+      padding: 10px 14px;
       font-weight: 600;
       border-radius: 6px;
       cursor: pointer;
-      transition: background 0.2s, color 0.2s;
+      transition: background .2s, color .2s, border-color .2s;
       width: auto;
-      display: inline-block;
     }
 
     button:hover {
-      background: #a371f7;
+      background: #444;
       color: #fff;
+      border-color: #333;
     }
 
     hr {
@@ -77,21 +80,16 @@
       padding: 12px;
       border-radius: 6px;
       overflow-y: auto;
-      font-size: 0.95rem;
+      font-size: .95rem;
       color: #e0e0e0;
       width: 100%;
       min-width: 98%;
       flex: 1;
-      box-sizing: border-box;
       display: flex;
       flex-direction: column;
       gap: 8px;
-      scroll-behavior: smooth;
-      /* Hide scrollbars */
       scrollbar-width: none;
-      /* Firefox */
       -ms-overflow-style: none;
-      /* IE 10+ */
     }
 
     .markdown-body::-webkit-scrollbar {
@@ -100,10 +98,7 @@
       background: transparent;
     }
 
-    .markdown-body::-webkit-scrollbar-track {
-      background: transparent;
-    }
-
+    .markdown-body::-webkit-scrollbar-track,
     .markdown-body::-webkit-scrollbar-thumb {
       background: transparent;
     }
@@ -112,20 +107,19 @@
     .assistant-message {
       padding: 8px 12px;
       border-radius: 8px;
-      word-break: break-word;
       position: relative;
-      /* For timestamp positioning */
+      word-break: break-word;
     }
 
     .user-message {
-      background-color: #757474;
+      background: #757474;
       color: #fff;
       align-self: flex-end;
       text-align: right;
     }
 
     .assistant-message {
-      background-color: #2a2a2a;
+      background: #2a2a2a;
       color: #e0e0e0;
       align-self: flex-start;
       text-align: left;
@@ -134,59 +128,13 @@
     .timestamp {
       position: absolute;
       bottom: -1.2em;
-      /* Adjust as needed */
-      font-size: 0.3rem;
+      font-size: .3rem;
       color: #888;
-    }
-
-    .user-message .timestamp {
-      right: 0;
-    }
-
-    .assistant-message .timestamp {
-      left: 0;
-    }
-
-    #promptText {
-      width: 80%;
-      padding: 2px;
-      border-radius: 4px;
-      border: 1px solid #555;
-      background: #222;
-      color: #eee;
-      font-size: 1rem;
-      resize: vertical;
-      height: 1.0em;
-      line-height: 1.0;
-    }
-    .button-grouptop {
-      display: flex;
-      margin: 0 auto;
-      gap: 8px;
-      justify-content: flex-start;
-      align-items: center;
-    }
-    .button-group {
-      display: flex;
-      margin: 0 auto;
-      gap: 8px;
-      justify-content: flex-start;
-      align-items: center;
-    }
-
-    #clearBtn {
-      background: #ca3e47;
-      color: #fff;
-    }
-
-    #clearBtn:hover {
-      background: #b32831;
     }
 
     .input-area {
       width: 98%;
       margin: 0 auto;
-      /* Center horizontally */
       max-width: 800px;
       border-radius: 8px;
       position: sticky;
@@ -195,36 +143,56 @@
       padding: 10px 20px;
       border-top: 1px solid #333;
       overflow-y: auto;
-      /* Allow vertical scrolling if needed */
-      overflow-x: hidden;
-      /* Hide horizontal scrollbar */
-      scrollbar-width: none;
-      /* Firefox */
-      -ms-overflow-style: none;
-      /* IE 10+ */
+    }
+
+    svg {
+      stroke: #aaa;
     }
   </style>
 </head>
 
 <body>
   <div class="card">
-    <h2>LLM Sidebar</h2>
     <div id="responseArea" class="markdown-body"></div>
+
     <div class="button-grouptop">
-      <button id="summariseBtn">Summarise</button>
-      <button id="translateBtn">Translate to Chinese</button>
-      <button id="clearBtn">Clear</button>
+      <button id="summariseBtn" title="Summarise" aria-label="Summarise">Summary</button>
+      <button id="translateBtn" title="Translate" aria-label="Translate">Translate</button>
+      <button id="clearBtn" aria-label="Clear">Clear</button>
     </div>
-  </div>
-  <div class="input-area">
-    <textarea id="promptText" placeholder="Enter your prompt here"></textarea>
-    <div class="button-group">
-      <button id="chatBtn">Chat</button>
-      <button id="saveBtn">Save</button>
-    </div>
-    <div id="providerInfo">Loading provider…</div>
   </div>
 
+  <div class="input-area">
+    <div style="display:flex; align-items:flex-end; width:100%; gap:4px;">
+      <!-- Prompt text -->
+      <div id="promptText" contenteditable="true" spellcheck="true" role="textbox" placeholder="Enter prompt here…"
+        style="flex:1; min-height:2.9em; padding:2px; border:1px solid #555;border-radius:8px;
+                  background:#222; color:#eee; font-size:1rem; height:auto; overflow:auto; ">
+      </div>
+      <div class="button-group" style="display:flex; flex-direction:column; gap:4px;
+                  border:1px solid #444; border-radius:8px;
+                  background:transparent; padding:4px;">
+        <button id="chatBtn" title="Start a chat conversation" aria-label="Open chat"
+          style="background:none; border:none; padding:0; margin-left:10px; margin-right:10px;">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
+            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M10 9l-6 6 6 6" />
+            <path d="M20 4v7a4 4 0 0 1-4 4H5" />
+          </svg>
+        </button>
+        <button id="saveBtn" title="Save chat history" aria-label="Save chat history"
+          style="background:none; border:none; padding:0; margin-left:10px; margin-right:10px;">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
+            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <g fill="none" fill-rule="evenodd">
+              <path d="M18 14v5a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8c0-1.1.9-2 2-2h5M15 3h6v6M10 14L20.2 3.8" />
+            </g>
+          </svg>
+        </button>
+      </div>
+    </div>
+  </div>
+  <div id="providerInfo" style="margin-top:8px;font-size: .65rem; color: #595858;  ">Loading provider…</div>
   <script type="module" src="markdown-it.min.js"></script>
   <script type="module" src="sidebar.js"></script>
 </body>
