Add skin, Dark or Light theme select. Bump to V0.0.3

--- a/src/ui/options/optionsTemplate.html
+++ b/src/ui/options/optionsTemplate.html
@@ -39,6 +39,13 @@
         <option value="zh-CN">Simp-Chinese (zh-CN)</option>
       </select>
     </label>
+    <label for="skin">
+      Skin:
+      <div class="radio-group">
+      <input type="radio" name="skin" id="skin-dark" value="dark" checked> Dark
+      <input type="radio" name="skin" id="skin-light" value="light"> Light
+      </div>
+    </label>
     <button type="button" id="saveBtn">Save Settings</button>    
     <span id="status"></span>    
   </form>
