--- a/src/ui/sidebar/index.html
+++ b/src/ui/sidebar/index.html
@@ -4,150 +4,9 @@
 <head>
   <meta charset="utf‑8" />
   <title>LLM Sidebar</title>
+  <link id="themeStyles" rel="stylesheet" href="">
   <style>
-    body {
-      font-family: 'Inter', system-ui, sans-serif;
-      background: #121212;
-      margin: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      box-sizing: border-box;
-      min-height: 100vh;
-      overflow-x: hidden;
-    }
-
-    .card {
-      background: #1e1e1e;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
-      width: 100%;
-      max-width: 800px;
-      display: flex;
-      flex-direction: column;
-      gap: 12px;
-      height: auto;
-      flex: 1;
-      overflow: hidden;
-    }
-
-    h2 {
-      margin: 0 0 8px;
-      font-size: 1.4rem;
-      color: #bb86fc;
-    }
-
-    #providerInfo {
-      font-size: .9rem;
-      color: #a0a0a0;
-    }
-
-    /* 按鈕群組置中 */
-    .button-grouptop {
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-      margin-top: 12px;
-    }
-
-    button {
-      background: transparent;
-      color: #a0a0a0;          /* 灰白文字 */
-      border: 1px solid #444;  /* 灰色外框 */
-      padding: 10px 14px;
-      font-weight: 600;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background .2s, color .2s, border-color .2s;
-      width: auto;
-    }
-
-    button:hover {
-      background: #444;
-      color: #fff;
-      border-color: #333;
-    }
-
-    hr {
-      border: none;
-      border-top: 1px solid #333;
-      margin: 12px 0;
-    }
-
-    .markdown-body {
-      background: #1e1e1e;
-      padding: 12px;
-      border-radius: 6px;
-      overflow-y: auto;
-      font-size: .95rem;
-      color: #e0e0e0;
-      width: 100%;
-      min-width: 98%;
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-      scrollbar-width: none;
-      -ms-overflow-style: none;
-    }
-
-    .markdown-body::-webkit-scrollbar {
-      width: 0;
-      height: 0;
-      background: transparent;
-    }
-
-    .markdown-body::-webkit-scrollbar-track,
-    .markdown-body::-webkit-scrollbar-thumb {
-      background: transparent;
-    }
-
-    .user-message,
-    .assistant-message {
-      padding: 8px 12px;
-      border-radius: 8px;
-      position: relative;
-      word-break: break-word;
-    }
-
-    .user-message {
-      background: #757474;
-      color: #fff;
-      align-self: flex-end;
-      text-align: right;
-    }
-
-    .assistant-message {
-      background: #2a2a2a;
-      color: #e0e0e0;
-      align-self: flex-start;
-      text-align: left;
-    }
-
-    .timestamp {
-      position: absolute;
-      bottom: -1.2em;
-      font-size: .3rem;
-      color: #888;
-    }
-
-    .input-area {
-      width: 98%;
-      margin: 0 auto;
-      max-width: 800px;
-      border-radius: 8px;
-      position: sticky;
-      bottom: 0;
-      background: #1e1e1e;
-      padding: 10px 20px;
-      border-top: 1px solid #333;
-      overflow-y: auto;
-    }
-
-    svg {
-      stroke: #aaa;
-    }
+    /* This file is now empty – styles are in dark.css / light.css */
   </style>
 </head>
 
@@ -164,16 +23,14 @@
 
   <div class="input-area">
     <div style="display:flex; align-items:flex-end; width:100%; gap:4px;">
-      <!-- Prompt text -->
-      <div id="promptText" contenteditable="true" spellcheck="true" role="textbox" placeholder="Enter prompt here…"
-        style="flex:1; min-height:2.9em; padding:2px; border:1px solid #555;border-radius:8px;
-                  background:#222; color:#eee; font-size:1rem; height:auto; overflow:auto; ">
+      <div id="promptText" class="promptText" contenteditable="true" spellcheck="true" role="textbox"
+        placeholder="Enter prompt here…">
       </div>
       <div class="button-group" style="display:flex; flex-direction:column; gap:4px;
-                  border:1px solid #444; border-radius:8px;
+                  border-radius:8px;
                   background:transparent; padding:4px;">
         <button id="chatBtn" title="Start a chat conversation" aria-label="Open chat"
-          style="background:none; border:none; padding:0; margin-left:10px; margin-right:10px;">
+          style="background:none; border:2px; padding:0;  margin-right:20px;">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="M10 9l-6 6 6 6" />
@@ -181,12 +38,10 @@
           </svg>
         </button>
         <button id="saveBtn" title="Save chat history" aria-label="Save chat history"
-          style="background:none; border:none; padding:0; margin-left:10px; margin-right:10px;">
+          style="background:none; border:2px; padding:0;  margin-right:20px;">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <g fill="none" fill-rule="evenodd">
-              <path d="M18 14v5a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8c0-1.1.9-2 2-2h5M15 3h6v6M10 14L20.2 3.8" />
-            </g>
+            <path d="M3 15v4c0 1.1.9 2 2 2h14a2 2 0 0 0 2-2v-4M17 9l-5 5-5-5M12 12.8V2.5" />
           </svg>
         </button>
       </div>
